--- a/app/templates/inicio.html
+++ b/app/templates/inicio.html
@@ -1,13 +1,44 @@
 {% extends 'base.html' %}
-{% block titulo %}Bienvenidos al Sistema{% endblock %}
+{% block titulo %}Informacion del Usuario{% endblock %}
 
 {% block contenido %}
-{% include 'menu.html'%}
-<div class="card text-bg-primary mb-3">
-    <div class="card-header">Bienvenidos al Sistema</div>
-    <div class="card-body">
-        <h5 class="card-title">Esto es una muestra de Login</h5>
-        <p class="card-text">Información importante</p>
+
+<div class="d-flex justify-content-end" role="search">
+    <a class="btn btn-outline-success" href="/salir">Log Out</a>
+</div>
+
+<h2 class="card-title">Welcome,! {{session['usuario']['nombre']}}</h2>
+<div class="col-sm-6">
+    <div class="card" class="col-sm-6">
+        <div class="card-body">
+            {% for usuario in usuarios %}
+            <p class="card-text"> {{usuario.nombre}} poked you times</p>
+            {% endfor %}
+        </div>
     </div>
 </div>
+
+<h2 class="card-title">People you may want to poke:</h2>
+<table class="table table-striped-columns">
+    <thead>
+        <tr>
+            <th>Nombre</th>
+            <th>Alias</th>
+            <th>Correo Electronico</th>
+            <th>Poke History</th>
+            <th>Action</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for usuario in usuarios %}
+        <tr>
+            <td>{{ usuario.nombre }}</td>
+            <td>{{ usuario.alias }}</td>
+            <td>{{ usuario.email }}</td>
+            <td>{{ usuario.pokes_recibidos}}</td>
+            <td><input class="buttonPoke" type="button" value="Poke!" data-user-id="{{ usuario.id }}"></td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
 {% endblock %}
