--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,29 +2,33 @@
 <html lang="en">
 
 <head>
+    <title>{% block titulo %}{% endblock %} - Mi sistema de EXAMEN</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block titulo %}{% endblock %} - Mi sistema de EXAMEN</title>
+    <title>login</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
+        integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/misestilos.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@300;600&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ffec4ec2ed.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 
 <body>
-
-
 
     <div class="container mt-2">
 
         {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
-        
-            {% for categoria, message in messages %}
-            <div class="alert alert-{{categoria}}" role="alert">
-                {{message}}
-            </div>
-            {% endfor %}
-    
+
+        {% for categoria, message in messages %}
+        <div class="alert alert-{{categoria}}" role="alert">
+            {{message}}
+        </div>
+        {% endfor %}
+
         {% endif %}
         {% endwith %}
 
@@ -32,8 +36,6 @@
         {% block contenido %}
         {% endblock %}
     </div>
-
-    <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
 </body>
 
 </html>
