Ejercicio base de examen

--- a/app/templates/addtrip.html
+++ b/app/templates/addtrip.html
@@ -11,7 +11,7 @@
         <a class="navbar-brand" href="#" style="color: antiquewhite;">Add a Job</a>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/index" style="color: antiquewhite;">Home</a>
+                <a class="nav-link" href="/login" style="color: antiquewhite;">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/salir" style="color: antiquewhite;">Logout</a>
