--- a/app/templates/addJob.html
+++ b/app/templates/addJob.html
@@ -8,21 +8,21 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-        <a class="navbar-brand" href="#" style="color: antiquewhite;">Add a Job</a>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/login" style="color: antiquewhite;">Home</a>
+                <a class="nav-link" href="/dashboard" style="color: antiquewhite;">Back</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/salir" style="color: antiquewhite;">Logout</a>
             </li>
         </ul>
     </nav>
-    <div class="col-lg-4 col-md-6 col-sm-12">
+    <h2 class="h2">Add a Job</h2>
+    <div class=" col-lg-4 col-md-6 col-sm-12" style="padding: 50px;">
         <form action="/procesar_addtrip" method="post">
             <div class="form-group">
-                <label for="destination">Destination</label>
-                <input type="text" class="form-control" id="destination" placeholder="Enter destination" name="destino">
+                <label for="destination">Title</label>
+                <input type="text" class="form-control" id="destination" placeholder="Enter Title" name="titulo">
             </div>
             <div class="form-group">
                 <label for="description">Description</label>
@@ -30,12 +30,8 @@
                     name="descripcion"></textarea>
             </div>
             <div class="form-group">
-                <label for="travelDateFrom">Travel Date From</label>
-                <input type="date" class="form-control" id="travelDateFrom" name="fecha_desde">
-            </div>
-            <div class="form-group">
-                <label for="travelDateTo">Travel Date To</label>
-                <input type="date" class="form-control" id="travelDateTo" name="fecha_hasta">
+                <label for="destination">Location</label>
+                <input type="text" class="form-control" id="destination" placeholder="Enter Location" name="location">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
