--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -72,7 +72,7 @@
           <img src="{{ url_for('static', filename='img/Logo.svg') }}" class="img-fluid" />
         </div>
         <div class="align-self-center w-100 px-lg-5 py-lg-4 p-4">
-          <h1 class="font-weight-bold mb-4" style="color: chartreuse;">Welcome to Trip Buddy</h1>
+          <h1 class="font-weight-bold mb-4" style="color: chartreuse;">Welcome to Handy Helper</h1>
           <h1 class="font-weight-bold mb-4">Inicia sesión</h1>
           <form action="procesar_login" method="post">
             <form class="mb-5">
@@ -91,19 +91,14 @@
               <button type="submit" class="btn btn-primary w-100">Iniciar sesión</button>
             </form>
           </form>
-          <p class="font-weight-bold text-center text-muted text-light">O inicia sesión (Muy Pronto) con</p>
-          <div class="d-flex justify-content-around">
-            <button type="button" class="btn btn-outline-light flex-grow-1 mr-2"><i class="fab fa-google lead mr-2"></i>
-              Google</button>
-            <button type="button" class="btn btn-outline-light flex-grow-1 ml-2"><i
-                class="fab fa-linkedin lead mr-2"></i>Linkedin</button>
+          <div class="text-center px-lg-5 pt-lg-3 pb-lg-4 p-4 mt-auto w-100">
+            <p class="d-inline-block mb-0">¿Todavia no tienes una cuenta?</p> <a href="registro"
+              class="text-light font-weight-bold text-decoration-none">Crea una ahora</a>
           </div>
         </div>
-        <div class="text-center px-lg-5 pt-lg-3 pb-lg-4 p-4 mt-auto w-100">
-          <p class="d-inline-block mb-0">¿Todavia no tienes una cuenta?</p> <a href="/registro"
-            class="text-light font-weight-bold text-decoration-none">Crea una ahora</a>
-        </div>
       </div>
+
+    </div>
     </div>
   </section>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
