--- a/app/templates/registro.html
+++ b/app/templates/registro.html
@@ -114,7 +114,7 @@
                         </form>
                 </div>
                 <div class="text-center px-lg-5 pt-lg-3 pb-lg-4 p-4 mt-auto w-100">
-                    <p class="d-inline-block mb-0">¿Quieres ir al login?</p> <a href="/index"
+                    <p class="d-inline-block mb-0">¿Quieres ir al login?</p> <a href="/login"
                         class="text-light font-weight-bold text-decoration-none">Login</a>
                 </div>
             </div>
