--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -28,6 +28,6 @@
         font-size: 2.5em;
     }
 </style>
-<a href="/join/{{vista.id}}" class="my-link">Add To My Jobs</a>
+<a href="#" class="my-link">Add To My Jobs</a>
 
 {% endblock %}
