--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -10,12 +10,6 @@
             <a class="nav-link" href="/addJob" style="color: antiquewhite;">Add JOB</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/view" style="color: antiquewhite;">view</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/edit" style="color: antiquewhite;">Edit</a>
-        </li>
-        <li class="nav-item">
             <a class="nav-link" href="/salir" style="color: antiquewhite;">Logout</a>
         </li>
     </ul>
@@ -40,7 +34,7 @@
                         <td>{{ dato.location }}</td>
                         <td style="padding: 15px;">
                             <a href=" /view/{{dato.id}}" style="margin-right: 10px;">View</a>
-                            <a href="/join/{{dato.id}}" style="margin-right: 10px;">Add</a>
+                            <a href="#" style="margin-right: 10px;">Add</a>
                             {% if dato.creador_job == session.usuario.usuario_id %}
                             <a href="/edit/{{dato.id}}" style="margin-right: 10px;">Edit</a>
                             <a href="/delete/{{dato.id}}">Cancel</a>
@@ -52,22 +46,25 @@
             </table>
         </div>
         <div class="col-md-6 col-lg-6">
-            <table class=" table table-bordered border-primary">
+            <table class="table table-bordered border-primary">
                 <thead>
                     <tr>
-                        <th>MY JOB</th>
+                        <th>Job</th>
+                        <th>Location</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
-                    {% for dato in data %}
+                    {% for dato in jobs1 %}
                     <tr>
-                        <td>{{dato.titulo}}</td>
-                        <td style="padding: 10px; text-align: right;"">
-                                <a href=" /view/{{dato.id}}" style="margin-right: 10px;">View</a>
-                            <a href="/delete/{{dato.id}}" style="margin-right: 10px;">Done</a>
+                        <td>{{ dato.titulo }}</td>
+                        <td>{{ dato.location }}</td>
+                        <td style="padding: 15px;">
+                            <a href=" /view/{{dato.id}}" style="margin-right: 10px;">View</a>
+                            <a href="/delete/{{dato.id}}">Done</a>
                         </td>
                     </tr>
-                    {%endfor%}
+                    {% endfor %}
                 </tbody>
             </table>
         </div>
